--- a/HiddenButton/HiddenButton/Base.lproj/Main.storyboard
+++ b/HiddenButton/HiddenButton/Base.lproj/Main.storyboard
@@ -126,8 +126,12 @@
                                 <rect key="frame" x="166" y="648" width="100" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Go">
-                                    <fontDescription key="titleFontDescription" type="system" weight="semibold" pointSize="35"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Go" cornerStyle="capsule">
+                                    <backgroundConfiguration key="background">
+                                        <color key="backgroundColor" red="0.22156290872511397" green="0.69289081346452597" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    </backgroundConfiguration>
+                                    <fontDescription key="titleFontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="35"/>
+                                    <color key="baseForegroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </buttonConfiguration>
                                 <connections>
                                     <action selector="goButtonHndler:" destination="7Ic-JP-UD9" eventType="touchUpInside" id="Dae-wR-tXc"/>
@@ -442,16 +446,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="109" translatesAutoresizingMaskIntoConstraints="NO" id="wtM-BL-QFV">
-                                <rect key="frame" x="94.5" y="226.5" width="225" height="443.5"/>
+                                <rect key="frame" x="94.5" y="190.5" width="225" height="515"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Enter your name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1xA-XN-14S">
-                                        <rect key="frame" x="50" y="0.0" width="125" height="20.5"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
+                                        <rect key="frame" x="25" y="0.0" width="175" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                        <color key="textColor" red="0.96862745100000003" green="0.96862745100000003" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ew2-1U-3JT">
-                                        <rect key="frame" x="0.0" y="129.5" width="225" height="34"/>
+                                        <rect key="frame" x="0.0" y="139" width="225" height="34"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="225" id="VOh-D7-RAA"/>
                                         </constraints>
@@ -459,19 +463,25 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bdj-4j-txM">
-                                        <rect key="frame" x="20" y="272.5" width="185" height="31"/>
+                                        <rect key="frame" x="20" y="282" width="185" height="62"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="62" id="9ij-2s-koX"/>
+                                        </constraints>
                                         <color key="tintColor" red="0.0039215686269999999" green="0.0039215686269999999" blue="0.0039215686269999999" alpha="1" colorSpace="calibratedRGB"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" title="Start"/>
-                                        <buttonConfiguration key="configuration" style="filled" title="Start"/>
+                                        <buttonConfiguration key="configuration" style="filled" title="START" cornerStyle="capsule"/>
                                         <connections>
                                             <action selector="startButtonHandler:" destination="L1h-1s-z0Y" eventType="touchUpInside" id="YK9-tD-y6d"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6rP-dM-sjV">
-                                        <rect key="frame" x="34.5" y="412.5" width="156" height="31"/>
+                                        <rect key="frame" x="34.5" y="453" width="156" height="62"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="62" id="kx9-KD-cAu"/>
+                                        </constraints>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="filled" title="Choose Your Figther"/>
+                                        <buttonConfiguration key="configuration" style="filled" title="Choose Your Figther" cornerStyle="capsule"/>
                                         <connections>
                                             <action selector="chooseBTNHndler:" destination="L1h-1s-z0Y" eventType="touchUpInside" id="2X2-aY-uOU"/>
                                         </connections>
@@ -486,7 +496,7 @@
                             </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="aBw-Kq-QHl"/>
-                        <color key="backgroundColor" systemColor="systemPinkColor"/>
+                        <color key="backgroundColor" systemColor="systemPurpleColor"/>
                         <constraints>
                             <constraint firstItem="wtM-BL-QFV" firstAttribute="centerY" secondItem="Cf6-PG-ygO" secondAttribute="centerY" id="NiO-du-KCr"/>
                             <constraint firstItem="wtM-BL-QFV" firstAttribute="centerX" secondItem="Cf6-PG-ygO" secondAttribute="centerX" id="UHy-q5-I80"/>
@@ -692,9 +702,6 @@
         </systemColor>
         <systemColor name="systemIndigoColor">
             <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemPinkColor">
-            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemPurpleColor">
             <color red="0.68627450980392157" green="0.32156862745098042" blue="0.87058823529411766" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
